packages/portfolio-site/main/default/objects/Experience__c/fields/Accomplishments__c.field-meta.xml
<CustomField>
    <fullName>Accomplishments__c</fullName>
    <label>Accomplishments</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>