packages/portfolio-site/main/default/objects/Experience__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Experiences</relationshipLabel>
    <relationshipName>Work_Experiences</relationshipName>
    <type>Lookup</type>
</CustomField>