packages/portfolio-site/main/default/objects/Experience__c/fields/Employer__c.field-meta.xml
<CustomField>
    <fullName>Employer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employer</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Work_Experiences</relationshipName>
    <type>Lookup</type>
</CustomField>