packages/portfolio-site/main/default/objects/Experience__c/fields/Is_Current_Role__c.field-meta.xml
<CustomField>
    <fullName>Is_Current_Role__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If true, End Date is ignored and resume shows “Present”</description>
    <label>Is Current Role</label>
    <type>Checkbox</type>
</CustomField>