packages/portfolio-site/main/default/objects/Experience__c/fields/Is_Remote__c.field-meta.xml
<CustomField>
    <fullName>Is_Remote__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Renders “(Remote)” next to location on generated resume</description>
    <label>Is Remote</label>
    <type>Checkbox</type>
</CustomField>