packages/portfolio-site/main/default/objects/Experience__c/fields/Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>Sort_Order__c</fullName>
    <description>Controls resume order. Lower = higher on the page. Allows manual override of date order</description>
    <label>Sort Order</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>