packages/portfolio-site/main/default/objects/Experience__c/validationRules/End_Date_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>End_Date_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(ISBLANK(End_Date__c)), Is_Current_Role__c = TRUE)</errorConditionFormula>
    <errorDisplayField>End_Date__c</errorDisplayField>
    <errorMessage>You can&apos;t have an end date and still be employed.</errorMessage>
</ValidationRule>